--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "dev": "concurrently \"cd server && npm run dev \" \"cd app && npm start\""
   },
   "dependencies": {
-    "concurrently": "^7.0.0"
+    "concurrently": "^7.0.0",
+    "nodemon": "^2.0.15"
   }
 }
